--- a/index.html
+++ b/index.html
@@ -3,16 +3,22 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/css/bootstrap.min.css" rel="stylesheet" 
+    integrity="sha384-QWTKZyjpPEjISv5WaRU9OFeRpok6YctnYmDr5pNlyT2bRjXh0JMhjY6hW+ALEwIH" crossorigin="anonymous">
+    <link href="./index.css" rel="stylesheet">
     <title>To-Do Application</title>
 </head>
 <body>
-    <h1>TO-DO APPLICATION</h1>
-<div>
-    <div class="task-container">
+    <h1 class="text-center mt-3">TO-DO APPLICATION</h1>
+<div class="container">
+    <div class="task-container mt-3">
 
     </div>
     <input type="text" class="input"/>
-    <button onclick="renderToDo()" class="">Add</button>
+    <button onclick="renderToDo()" type="button" class="btn btn-warning">Add</button>
 </div>
+
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.3/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-YvpcrYf0tY3lHB60NNkmXc5s9fDVZLESaAA55NDzOxhy9GkcIdslK1eN7N6jIeHz" crossorigin="anonymous"></script>
 </body>
 </html>
