--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 </head>
 <body>
     <h1 class="text-center mt-3">TO-DO APPLICATION</h1>
-    <div class="container" id="container">
+    <div class="container text-start" id="container">
         <div class="todo-item text-start"></div>
     </div>
     <div class="action-container mt-3">
